<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_light"
    tools:context=".Activity.SignUp.SignUpActivity">

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:src="@drawable/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.5"/>

    <TextView
        android:id="@+id/tv_title_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:text="@string/sign_Up"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_email_Sign_Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/email"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_sign_up" />

    <EditText
        android:id="@+id/et_input_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shp_edittext_stroke"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_email_Sign_Up"/>

    <TextView
        android:id="@+id/tv_title_password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/password"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_email_sign_up"/>

    <EditText
        android:id="@+id/et_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shp_edittext_stroke"
        android:hint="@string/hint_password"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password_sign_up"
        android:gravity="right"/>

    <TextView
        android:id="@+id/tv_title_confirm_password_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/confirm_password"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_up"/>

    <EditText
        android:id="@+id/et_confirm_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shp_edittext_stroke"
        android:hint="@string/hint_confirm_password"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_confirm_password_sign_up"
        android:gravity="right"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:background="@drawable/shp_rect_pink"
        android:text="@string/sign_Up"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password_sign_up"
        app:layout_constraintWidth_percent="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout>