<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_light"
    tools:context=".Activity.Login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_color"
        android:layout_marginRight="@dimen/margin_25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"
        android:text="@string/login"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/username"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login" />

    <EditText
        android:id="@+id/et_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shp_edittext_stroke"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_username"/>

    <TextView
        android:id="@+id/tv_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:text="@string/password"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username_login"/>

    <EditText
        android:id="@+id/et_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/padding_10dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:background="@drawable/shp_edittext_stroke"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_13sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title_password"
        android:gravity="right"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_login"
        android:layout_marginTop="@dimen/margin_25dp"
        app:layout_constraintWidth_percent="0.4"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16sp"
        android:text="@string/login"
        android:background="@drawable/shp_rect_pink"/>

    <TextView
        android:id="@+id/tv_title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/green_caribbean"
        android:textSize="@dimen/font_16sp"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="@dimen/margin_25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"/>

    <TextView
        android:id="@+id/tv_title_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/font_13sp"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/tv_title_signup"
        android:layout_marginTop="@dimen/margin_25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="@dimen/padding_10dp"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>